Ensured we're using in-process (for now).

--- a/LocalIIS/Pages/Index.cshtml
+++ b/LocalIIS/Pages/Index.cshtml
@@ -42,6 +42,7 @@
         function startHitCount(elHitCount, elErrorCount) {
             hitCount = 0;
             errorCount = 0;
+            $('#errors').empty();
             var r = () => render(elHitCount, elErrorCount);
             r();
 
